// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> spec renders the component 1`] = `
<DocumentFragment>
  <button
    class="button primary theme-default size-default"
    type="button"
  >
    <span
      class="label"
    >
      My Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> spec renders the loading button component 1`] = `
<DocumentFragment>
  <button
    aria-disabled="true"
    class="button primary theme-default size-default isLoading"
    type="button"
  >
    <div
      class="loadingSpinner small"
    >
      <div />
      <div />
      <div />
    </div>
    <span
      class="label"
    >
      foo
    </span>
  </button>
</DocumentFragment>
`;
